# fastapi-app

./: Dockerfile  README.md  github.txt  pyproject.toml  requirements.txt
app/: main.py
at2weather/: __init__.py  data_fetcher.py  features.py  features_reg.py  metrics.py  metrics_reg.py  model_catboost_reg.py  model_xgb.py  persistence.py  plots.py  split.py
data/raw/: sydney_weather_full_2015_2025.csv
models/: catboost_regressor.pkl  xgb_classifier.pkl
